Fix the name alignment and padding in game setup

--- a/src/index.scss
+++ b/src/index.scss
@@ -144,9 +144,6 @@ button.bgcolor3:hover {
   padding: 2vw;
 }
 
-.gameSetup {
-}
-
 .homeTitle {
   font-weight: bold;
   text-align: center;
@@ -553,13 +550,13 @@ $diceSize: 3.4rem;
 
 .gameSetupPlayer {
   width: 100%;
-  max-width: 30rem;
+  max-width: 22rem;
   border-radius: 0.3rem;
   // No border not event for yellow
   border: 0px;
   display: flex;
 
-  padding: 0.3rem;
+  padding: 0.3rem 0.5rem;
   margin: 0.2rem;
   box-shadow: 1px 1px 2px black;
 }
@@ -575,6 +572,7 @@ $diceSize: 3.4rem;
   color: grey;
   text-align: center;
   box-shadow: 0 0 0 white;
+  justify-content: center;
 }
 
 .gameSetupInviteWrap {
